@startuml
' Layout horizontal ortogonal
left to right direction
skinparam linetype ortho

' === ENTIDADES CENTRAIS ===

entity rider {
  * id : int
  --
  name : varchar(50)
  main_user : varchar(50)
  rider_img_body : varchar(50)
  rider_img_sm : varchar(50)
  id_show : int <<FK>>

}

entity show {
  * id : int
  --
  name : varchar(100)
  year : int
  synopsis : varchar(500)
  show_img_sm : imageField
  show_img_xl : imageField
  show_img_banner : imageField
  show_img_logo : imageField

}



' === USUÁRIO E RELACIONADOS ===

entity usuario {
  * id : int
  --
  username : char(15) <<UNIQUE>>
  password : char(30)
  img : ImageField
}

entity post {
  * id : int
  --
  id_usuario : int <<FK>>
  content : varchar(500)
  img : ImageField
}

entity comentario {
  * id : int
  --
  id_post : int <<FK>>
  comentario : varchar(50)
  id_autor : int <<FK>>
  date : DateField
}

entity rider_favorito {
  * id : int
  --
  id_review : int <<FK>>
  id_rider : int <<FK>>
}

entity review { 
  * id : int
  --
  id_show : int <<FK>>
  id_user : int <<FK>>
  review : varchar(250)
}

entity tag {
  * id : int
  --
  id_post : int <<FK>>
  id_rider : int <<FK>>
}

tag }o--|| post
tag }o--|| rider
rider }o--|| show
post }o--|| usuario 
comentario }o--|| post
comentario }o--|| usuario 
rider_favorito }o--|| review 
rider_favorito }o--|| rider 
review }o--|| usuario 
review }o--|| show
@enduml
